Fix aligment of .model-properties
After introduce the last save date at workspace header a
layout misalignment took place at .model-properties.

This commit fix this issue

--- a/app/sass/structure.scss
+++ b/app/sass/structure.scss
@@ -125,7 +125,7 @@ a,
 .model-properties {
 	position: fixed;
 	z-index: 10;
-	top: 88px;
+	top: 109px;
 	right: -224px;
 	bottom: 0;
 	width: 240px;
@@ -142,7 +142,7 @@ a,
 	height: 25px;
 	width: 25px;
 	position: absolute;
-	top: 3px;
+	top: 5px;
 	left: -25px;
 	text-align: center;
 	border: 1px solid #e7e7e7;
